--- a/client/src/stylesheets/_dimens.scss
+++ b/client/src/stylesheets/_dimens.scss
@@ -21,6 +21,8 @@ $font-weight-medium: 400;
 $font-weight-bold: 600;
 $font-weight-default: $font-weight-medium;
 
+$spacing-form-empty: 13px;
+
 $spacing-super-small: 1px;
 $spacing-extra-small: 2px;
 $spacing-extra-small-alt: 3px;
