--- a/client/src/views/Dashboard/styles.scss
+++ b/client/src/views/Dashboard/styles.scss
@@ -6,6 +6,10 @@
     flex-direction: column;
     overflow-y: auto;
 
+    .tabs {
+        flex-shrink: 0;
+    }
+
     .container {
         display: flex;
         flex-direction: column;
